source/blender/editors/include/UI_interface.h
@@ -735,7 +735,9 @@ void UI_block_set_search_only(uiBlock *block, bool search_only);
 void UI_block_free(const struct bContext *C, uiBlock *block);
 void UI_blocklist_free(const struct bContext *C, struct ARegion *region);
 void UI_blocklist_free_inactive(const struct bContext *C, struct ARegion *region);
-void UI_screen_free_active_but(const struct bContext *C, struct bScreen *screen);
+
+void UI_screen_free_active_but_highlight(const struct bContext *C, struct bScreen *screen);
+void UI_region_free_active_but_all(struct bContext *context, struct ARegion *region);
 
 void UI_block_region_set(uiBlock *block, struct ARegion *region);
 
